<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NeighbourProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    tools:context=".ui.neighbour_list.IdentityActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageView_Avatar"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/AvatarPicture"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account"
                app:layout_collapseMode="parallax"/>

            <TextView
                android:id="@+id/textView_NomPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="230dp"
                android:layout_marginBottom="20dp"
                android:text="@string/NomPhoto"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textColorHint="#D8CECE"
                android:textStyle="bold" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:navigationIcon="@drawable/retour"/>

    </android.support.design.widget.CollapsingToolbarLayout>
</android.support.design.widget.AppBarLayout>
<include layout="@layout/content_scrolling" />

<android.support.design.widget.FloatingActionButton
    android:id="@+id/floatingActionButton_AddToFavorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:backgroundTint="#FFFFFF"
    android:clickable="true"
    android:contentDescription="@string/AddToFavorite"
    android:focusable="true"
    app:backgroundTint="#FFFFFF"
    app:layout_anchor="@id/app_bar"
    app:layout_anchorGravity="bottom|end"
    app:rippleColor="#CFDBEF"
    app:srcCompat="@drawable/ic_star_yellow_24dp" />

</android.support.design.widget.CoordinatorLayout>